2006-03-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericInstanceType.cs:
		Correctly return if the instance is a value type
		or not.

2006-03-25  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ModuleDefinition.cs:
		Support the unreadable security declarations
		when converting one to byte [].

	* Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Add a FullLoad method on a module.

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Fix a  few bugs in generics type emitting.

	* Mono.Cecil.Cil/CodeWriter.cs:
		Cache local sig as well.

2006-03-24  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Cache method specs as well.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Replace the foreach char pattern by
		Encoding.GetBytes

2006-03-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs
	  CodeGen/templates/ImageReader.cs:
		Ensure type with the same name are added
		to the collection.

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Ensure every blob signature is unique.

	* Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Rename method to avoid confusion.

2006-03-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeWriter.cs:
		Precisely detect whether we emit fat seh or not.

	* Mono.Cecil/ReflectionWriter.cs:
		Avoid duplicates in the typespec table.

2006-03-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Correctly write generic parameters.

	* Mono.Cecil/SecurityDeclarationReader.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Fix for security declarations reading on .net 2.0.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/GenericContext.cs: